--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 title: Home
 ---
-<style>
-body{
+<style>body{
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -103,19 +102,19 @@ body{
     background: #333;
     color: #fff;
 </style>
-<body>
+</head><body>
     <div class="container">
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
-                    <h3>Design</h3>
+                    <img src="https://spee.ch/8/b416b166fd9dbe4e.png">
+                    <h3>About</h3>
                 </div>
             </div>
             <div class="face face2">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                        <a href="#">Read More</a>
+                    <p>SkateHive is based on the anarchist roots of skateboarding, and is working at taking back control of our culture from the social media giants, who profit off the monopoly of our...</p>
+                        <a href="http://127.0.0.1:4000/docs/#" class="keychainify-checked">Read More</a>
                 </div>
             </div>
         </div>
@@ -123,30 +122,31 @@ body{
             <div class="face face1">
                 <div class="content">
                     <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
-                    <h3>Code</h3>
+                    <h3>Guides</h3>
                 </div>
             </div>
             <div class="face face2">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                        <a href="#">Read More</a>
+                    <p>Some people might feel overhemmeld with so much new information. And yes, its a lot of new stuff. We made some guides for make it easier for you, pothead!</p>
+                        <a href="https://vladhzc.github.io/skatehive.github.io/guides" class="keychainify-checked">See Guides</a>
                 </div>
             </div>
         </div>
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
-                    <h3>Launch</h3>
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipartcraft.com%2Fimages%2Fdiscord-logo-transparent-gray-6.png&f=1&nofb=1">
+                    <h3>Get in</h3>
                 </div>
             </div>
             <div class="face face2">
                 <div class="content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                        <a href="#">Read More</a>
+                        <a href="http://127.0.0.1:4000/docs/#" class="keychainify-checked">Join Us</a>
                 </div>
             </div>
         </div>
     </div>
-</body>
 
+
+</body></html>
