--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: Home
 ---
-<style>body{
+
+<style>
+body{
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -56,7 +58,7 @@ title: Home
 }
 
 .container .card .face.face1 .content img{
-    max-width: 100px;
+    max-width: 120px;
 }
 
 .container .card .face.face1 .content h3{
@@ -101,8 +103,13 @@ title: Home
 .container .card .face.face2 .content a:hover{
     background: #333;
     color: #fff;
+
+
 </style>
-</head><body>
+<head>
+     
+</head>
+<body>
     <div class="container">
         <div class="card">
             <div class="face face1">
@@ -121,7 +128,7 @@ title: Home
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.dicionariopopular.com%2Fimagens%2Fnazareconfusamatematica.gif&f=1&nofb=1">
                     <h3>Guides</h3>
                 </div>
             </div>
@@ -147,6 +154,7 @@ title: Home
             </div>
         </div>
     </div>
+
 
 
 </body></html>
