--- a/404.html
+++ b/404.html
@@ -132,6 +132,6 @@ a::after {
 <div class="terminal">
   <h1>Error <span class="errorcode">404</span></h1>
   <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-  <p class="output">Please try to <a href="#1">go back</a> or <a href="#2">return to the homepage</a>.</p>
+  <p class="output">Please try to <a href="https://vladhzc.github.io/skatehive.github.io/">go back</a> or <a href="https://vladhzc.github.io/skatehive.github.io/">return to the homepage</a>.</p>
   <p class="output">Good luck.</p>
 </div>
